added factory for user service to avoid deprecated notice

--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,18 @@
 {
-    "name": "darkmatus/roleuserbridge",
-    "description": "ZfcUser/BjyAuthorize Bridge for auto-adding User to the user_role_table from BjyAuthorize.",
-    "type": "library",
-    "keywords": [
-        "zf2"
-    ],
-    "homepage": "https://github.com/darkmatus/roleuserbridge",
-    "authors": [
-        {
-            "name": "Darkmatus",
-            "email": "mueller@s-p-it.de",
-            "homepage": "https://github.com/darkmatus/"
-        }
-    ],
-    "require": {
+  "name" : "tribalx/roleuserbridge",
+  "description" : "ZfcUser/BjyAuthorize Bridge for auto-adding User to the user_role_table from BjyAuthorize.",
+  "keywords" : [ "zf2" ],
+  "autoload" : {
+    "psr-0" : {
+      "RoleUserBridge" : "src/"
     },
-    "autoload": {
-        "psr-0": {
-            "RoleUserBridge": "src/"
-        },
-        "classmap": [
-            "./"
-        ]
-    }
+    "classmap" : [ "./" ]
+  },
+  "type" : "library",
+  "homepage" : "https://github.com/darkmatus/roleuserbridge",
+  "authors" : [ {
+    "name" : "Darkmatus",
+    "email" : "mueller@s-p-it.de",
+    "homepage" : "https://github.com/darkmatus/"
+  } ]
 }
