--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "darkmatus/roleuserbridge",
+    "name": "tribalx/roleuserbridge",
     "description": "ZfcUser/BjyAuthorize Bridge for auto-adding User to the user_role_table from BjyAuthorize.",
     "type": "library",
     "keywords": [
